fix(table): comment out selected row styles to prevent fixed column bleed-through

--- a/src/theme/default.less
+++ b/src/theme/default.less
@@ -10,7 +10,6 @@ mark {
 
 // 当 table 作为 flex item 时，设置高度为 100%，以便在父容器中填满空间
 .n9e-antd-table-height-full {
-
   height: 100%;
   min-height: 0;
 
@@ -177,22 +176,22 @@ mark {
     }
   }
 
-  .ant-table-tbody > tr.ant-table-row-selected > td {
-    color: inherit;
-    background: rgb(var(--fc-fill-5-rgb) / 0.15);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected > td {
+  //   color: inherit;
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.15);
+  // }
 
-  .ant-table-tbody > tr.ant-table-row-selected:hover > td {
-    background: rgb(var(--fc-fill-5-rgb) / 0.25);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected:hover > td {
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.25);
+  // }
 
-  .ant-table-tbody > tr.ant-table-row-selected > td.ant-table-column-sort {
-    background: rgb(var(--fc-fill-5-rgb) / 0.15);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected > td.ant-table-column-sort {
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.15);
+  // }
 
-  .ant-table-tbody > tr.ant-table-row-selected:hover > td.ant-table-column-sort {
-    background: rgb(var(--fc-fill-5-rgb) / 0.25);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected:hover > td.ant-table-column-sort {
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.25);
+  // }
 }
 
 .fc-table-action-dropdown {
@@ -353,7 +352,7 @@ mark {
 }
 
 .n9e-checkbox-padding-right-0 {
-  .ant-checkbox+span {
+  .ant-checkbox + span {
     padding-right: 0 !important;
   }
 }
@@ -427,7 +426,6 @@ mark {
     &::-webkit-scrollbar-thumb {
       visibility: visible;
     }
-
   }
 
   &::-webkit-scrollbar-corner {
